# project-config

./: .pre-commit-config.yaml  .pre-commit-config.yml  README.md  pyproject.toml
project_config/: __init__.py  file_discovery_service.py  model.py  orm.py  project_dir.py
tests/: conftest.py  test_core.py  test_orm.py  test_project_dir.py  test_storage.py
