[tool.poetry]
name = "project-config"
version = "0.1.0"
description = "Project config for humans."
authors = ["kgpayne <ken@meltano.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "project_config"
known_first_party = ["tests"]
